<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_item_idea"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_list"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        app:cardCornerRadius="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFE8BB"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/tv_progress_idea"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/tv_progress_idea"
                android:textAlignment="center"
                android:textSize="10sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFE8BB"
            android:padding="3dp"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/tv_priority_idea"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/tv_priority_idea"
                android:textAlignment="center"
                android:textSize="10sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_idea_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="70dp"
            android:text="@string/tv_idea_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_description_idea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/tv_description_idea"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/bg_btn_delete"
            android:text="@string/delete" />
    </androidx.cardview.widget.CardView>
</LinearLayout>